manifests/ingestion/ingress-ingestion.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-ingestion
  namespace: axion-app
  labels:
    app.kubernetes.io/name: ingestion-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: "/docs"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "false"
    appgw.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: azure-application-gateway

  rules:
    - host: ingest.maneesh.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingestion-service
                port:
                  number: 80
